[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mitosam"
version = "0.0.1"
description = "A fine tuned Segment ANything Model (SAM) for Mitochorndia segmentaion."
authors = [
  { name = "Argha Sarker" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["mitosam"]
include = ["pyproject.toml", "mitosam/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mitosam"]
force-sort-within-sections = true

